# OpenMLS_benchmark

./: AGENT.md  Cargo.toml  Dockerfile  README.md  devices.yaml  diagnose_docker_baseline.sh  diagnosis.sh  docker-compose.scratch-test.generated.yml  docker-compose.split-test.generated.yml  docker-compose.yml  environment.yml  fix_venv.sh  install_openmls_deps.sh  statistics_analysis.ipynb  workers.scratch-test.host.txt  workers.split-test.txt
docker/: worker-entrypoint.sh
openmls-main/: Cargo.toml
openmls-main/openmls/: Cargo.toml
openmls-main/openmls/src/: lib.rs  profiling.rs
openmls-main/openmls/src/group/mls_group/: application.rs  commit_builder.rs  processing.rs
scripts/: build_external_worker.sh  external_devices.py  generate_compose.py  run_compose_benchmark.py
scripts/tests/: test_external_devices.py  test_layout.py
src/: client.rs  debug.rs  delivery_service.rs  http_retry.rs  key_repository.rs  lib.rs  local_launcher.rs  main.rs  message_relay.rs  service_metrics.rs  signal_metrics.rs  signal_participant.rs  staircase_runner.rs  worker_api.rs
