[package]
name = "mls_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
openmls = { version = "0.8.1", features = ["profiling-json"] }
openmls_rust_crypto = "0.5.1"
openmls_basic_credential = "0.5.0"
anyhow = "1.0.102"
tls_codec = "0.4.2"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hex = "0.4.3"
csv = "1.4"
clap = { version = "4.6", features = ["derive"] }
rand = "0.8.5"

[patch.crates-io]
openmls = { path = "openmls-main/openmls" }
openmls_rust_crypto = { path = "openmls-main/openmls_rust_crypto" }
openmls_basic_credential = { path = "openmls-main/basic_credential" }




#cargo update -p keccak --precise 0.2.0-rc.2
#cargo build