[package]
name = "mls_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
openmls = { version = "0.8.1", features = ["profiling-json"] }
openmls_rust_crypto = "0.5.1"
openmls_basic_credential = "0.5.0"
anyhow = "1.0.102"
tls_codec = "0.4.2"
axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1", "json"] }
tokio = { version = "1.50.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "net", "time", "sync"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hex = "0.4.3"
csv = "1.4"
clap = { version = "4.6", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
rand = "0.8.5"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
once_cell = "1"

[patch.crates-io]
openmls = { path = "openmls-main/openmls" }
openmls_rust_crypto = { path = "openmls-main/openmls_rust_crypto" }
openmls_basic_credential = { path = "openmls-main/basic_credential" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false

[profile.minsize]
inherits = "release"
opt-level = "z"
lto = "fat"


#cargo update -p keccak --precise 0.2.0-rc.2
#cargo build
