[package]
name = "signal_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
libsignal-protocol = { path = "libsignal-main/rust/protocol", features = ["kyber768"] }
libsignal-core = { path = "libsignal-main/rust/core" }
signal-crypto = { path = "libsignal-main/rust/crypto" }
anyhow = "1.0.102"
axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1", "json"] }
tokio = { version = "1.50.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "net", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hex = "0.4.3"
csv = "1.4"
clap = { version = "4.6", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
rand = "0.9"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
once_cell = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false

[profile.minsize]
inherits = "release"
opt-level = "z"
lto = "fat"
